--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
@@ -8,36 +8,28 @@
 <mat-accordion>
   <mat-expansion-panel class="expansion-style">
     <mat-expansion-panel-header class="expansion-style--header">
-      <mat-panel-title class="expansion-style--title" [ngClass]="{
-        '': esVerDetalle,
-        'sin-diligenciar':!esVerDetalle && (ajusteProgramacion?.observacionObra == null || ajusteProgramacion?.observacionObra == undefined || ajusteProgramacion?.tieneObservacionesProgramacionObra == null),
-        'en-proceso':!esVerDetalle && (ajusteProgramacion?.tieneObservacionesProgramacionObra == true && (ajusteProgramacion?.observacionObra?.observaciones == null || ajusteProgramacion?.observacionObra?.observaciones == '')) ,
-        'completo':!esVerDetalle && ((ajusteProgramacion?.observacionObra && ajusteProgramacion?.tieneObservacionesProgramacionObra != null) || !ajusteProgramacion?.tieneObservacionesProgramacionObra)
-      }">
+      <mat-panel-title class="expansion-style--title" [ngClass]="estadoSemaforoProgramacion">
       Programación de obra
       </mat-panel-title>
     </mat-expansion-panel-header>
     <app-programacion-de-obra
                               [ajusteProgramacion]="ajusteProgramacion"
                               [esVerDetalle]="esVerDetalle"
+                              (estadoSemaforo)="estadoSemaforoProgramacion = $event"
     >
 
     </app-programacion-de-obra>
   </mat-expansion-panel>
   <mat-expansion-panel class="expansion-style">
     <mat-expansion-panel-header class="expansion-style--header">
-      <mat-panel-title class="expansion-style--title" [ngClass]="{
-        '': esVerDetalle,
-        'sin-diligenciar':!esVerDetalle && (ajusteProgramacion?.observacionFlujo == null || ajusteProgramacion?.observacionFlujo == undefined || ajusteProgramacion?.tieneObservacionesFlujoInversion == null),
-        'en-proceso':!esVerDetalle && (ajusteProgramacion?.tieneObservacionesFlujoInversion == true && (ajusteProgramacion?.observacionFlujo?.observaciones == null || ajusteProgramacion?.observacionFlujo?.observaciones == '')) ,
-        'completo':!esVerDetalle && ((ajusteProgramacion?.observacionFlujo && ajusteProgramacion?.tieneObservacionesFlujoInversion != null) || !ajusteProgramacion?.tieneObservacionesFlujoInversion)
-      }">
+      <mat-panel-title class="expansion-style--title" [ngClass]="estadoSemaforoFlujo">
       Flujo de inversión de recursos
       </mat-panel-title>
     </mat-expansion-panel-header>
     <app-flujo-intervencion-recursos
                                       [ajusteProgramacion]="ajusteProgramacion"
                                       [esVerDetalle]="esVerDetalle"
+                                      (estadoSemaforo)="estadoSemaforoFlujo = $event"
     >
 
     </app-flujo-intervencion-recursos>
