--- a/asivamosffie.web/asivamosffie/src/app/_pages/programacion-personal-obra/components/tabla-registro-programacion/tabla-registro-programacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/programacion-personal-obra/components/tabla-registro-programacion/tabla-registro-programacion.component.html
@@ -54,7 +54,7 @@
                 color="accent"
                 class="btn-table"
                 (click)="openRegistroProgramacion( element, false )"
-                *ngIf="element.estadoProgramacionInicialCodigo === estadosProgramacion.sinProgramacionPersonal">
+                *ngIf="element.existeReprogramacionActiva == false && element.estadoProgramacionInicialCodigo === estadosProgramacion.sinProgramacionPersonal">
                 Registrar programación de personal
         </button>
 
@@ -62,7 +62,7 @@
                 color="accent"
                 class="btn-table"
                 (click)="aprobarProgramacion( element.contratacionProyectoId )"
-                *ngIf="element.estadoProgramacionInicialCodigo === estadosProgramacion.sinAprobacionProgramacionPersonal">
+                *ngIf="element.existeReprogramacionActiva == false &&  (element.estadoProgramacionInicialCodigo === estadosProgramacion.sinAprobacionProgramacionPersonal || element.estadoProgramacionInicialCodigo === estadosProgramacion.sinAprobacionAjusteProgramacionObra)">
                 Aprobar programación
         </button>
 
@@ -70,8 +70,9 @@
                 color="accent"
                 class="btn-table"
                 (click)="openRegistroProgramacion( element , false)"
-                *ngIf=" (element.estadoProgramacionInicialCodigo === estadosProgramacion.enRegistroProgramacion
-                        || element.estadoProgramacionInicialCodigo === estadosProgramacion.sinAprobacionProgramacionPersonal)">
+                *ngIf=" (element.existeReprogramacionActiva == false && (element.estadoProgramacionInicialCodigo === estadosProgramacion.enRegistroProgramacion
+                        || element.estadoProgramacionInicialCodigo === estadosProgramacion.sinAprobacionProgramacionPersonal
+                        || element.estadoProgramacionInicialCodigo === estadosProgramacion.sinAprobacionAjusteProgramacionObra))">
                 Ver detalle/Editar
         </button>
 
@@ -80,7 +81,7 @@
                 color="accent"
                 class="btn-table"
                 (click)="openRegistroProgramacion( element , true )"
-                *ngIf="element.estadoProgramacionInicialCodigo === estadosProgramacion.conAprobacionProgramacionPersonal">
+                *ngIf="element.estadoProgramacionInicialCodigo === estadosProgramacion.conAprobacionProgramacionPersonal || element.existeReprogramacionActiva == true">
                 Ver historial
         </button>
 
